1. add link to app store 2. fix font weight issue on mobile 3. link from privacy to index.html

--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,17 @@ h1
 }
 h2
 {
-	font-size: 36pt;
-	font-weight: 300;
+	font-size: 36px;
+	font-weight: 400;
 }
 p
 {
-	font-size: 24pt;
-	font-weight: 300;
+	font-size: 24px;
+	font-weight: 400;
 }
 li 
 {
-	font-size: 24pt;
+	font-size: 24px;
 }
 .bold
 {
